--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
+    "i": "^0.3.7",
+    "npm": "^10.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1"
   },
