--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.18.0",
     "i": "^0.3.7",
     "npm": "^10.2.5",
     "react": "^18.2.0",
